--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     Jangan beli, jangan percaya — GELAK PUN DAH PUAS! 🤣
   </div>
 
+  <div class="berita">
+  <h2>📢 Berita 3: Tikus pakai tali leher!</h2>
+  <p>“Saya CEO dapur sekarang!” katanya sambil gigit keju.</p>
+</div>
+
   <footer>© 2025 Fatih | Glitch Edition dan juga eKhabar!</footer>
 </body>
 </html>
