--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 </head>
 <body>
 
-  <div class="navbar">
-    <h1>🎭 Stage Akhbar</h1>
-    <a href="eKhabar.html">🌐 eKhabar</a>
-  </div>
+ <div class="navbar">
+  <h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Windows_logo_-_2002.svg/32px-Windows_logo_-_2002.svg.png" 
+         alt="Windows XP Logo" 
+         style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
+    🎭 Stage Akhbar
+  </h1>
+  <a href="eKhabar.html">🌐 eKhabar</a>
+</div>
+
 
   <p>Berita paling pelik dalam sejarah lawak manusia!</p>
 
