--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
  <div class="navbar">
   <h1>
-    <img src="https://www.citypng.com/public/uploads/preview/hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
+    <img src="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
          alt="Windows XP Logo" 
          style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
     🎭 Stage Akhbar
