--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Stage Akhbar</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" type="image/png">
 </head>
 <body>
 
