--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Stage Akhbar</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" type="image/png">
+  <link rel="icon" href="favicon.ico" type="image/png">
 </head>
 <body>
 
@@ -16,6 +16,7 @@
     🎭 Stage Akhbar
   </h1>
   <a href="eKhabar.html">🌐 eKhabar</a>
+   <a href="tentang.html">ℹ️ Tentang Kami</a>
 </div>
 
 
