--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
     🎭 Stage Akhbar
   </h1>
-  <a href="tentang.html">ℹ️ Tentang Kami</a>
+  <a href="tentangkami.html">ℹ️ Tentang Kami</a>
   <a href="eKhabar.html">🌐 eKhabar</a>
 </div>
 
