--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
   <p>“Saya CEO dapur sekarang!” katanya sambil gigit keju.</p>
 </div>
 
+<div class="berita">
+  <h2>📢 Lemang Bernafas Ditemui!</h2>
+  <p>“Saya cuma nak raya setiap hari,” kata lemang yang melompat dari dapur.</p>
+</div>
+
+<div class="berita">
+  <h2>📢 Kerusi Sekolah Lari Dari Kelas!</h2>
+  <p>“Dah 15 tahun orang duduk atas saya, saya nak rehat!” jerit kerusi sambil berlari ke padang.</p>
+</div>
+
+<div class="berita">
+  <h2>📢 Pensel Terlalu Tajam Sampai Potong Meja!</h2>
+  <p>Cikgu berkata, “Ini bukan alat tulis, ini senjata!”</p>
+</div>
+
+<div class="berita">
+  <h2>📢 Air Mineral Cakap Bahasa Korea?!</h2>
+  <p>Murid terkejut botol air jerit “Annyeong!” masa dibuka.</p>
+</div>
+
+<div class="berita">
+  <h2>📢 Budak Buka Laptop, Tiba-Tiba Keluar Nasi Lemak!</h2>
+  <p>“Saya install aplikasi Sarapan.exe je...” kata mangsa kenyang.</p>
+</div>
   <!-- 🔔 Kotak eKhabar -->
   
   <!-- ⚠️ Peringatan palsu -->
