--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
          alt="Windows XP Logo" 
          style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
-    🎭 Stage Akhbar
+     Stage Akhbar
   </h1>
   <a href="tentangkami.html">ℹ️ Tentang Kami</a>
   <a href="eKhabar.html">🌐 eKhabar</a>
