--- a/tentangkami.html
+++ b/tentangkami.html
@@ -49,6 +49,17 @@
 </head>
 <body>
 
+  <div class="navbar">
+  <h1>
+    <img src="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
+         alt="Windows XP Logo" 
+         style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
+     Stage Akhbar
+  </h1>
+  <a href="tentangkami.html">ℹ️ Tentang Kami</a>
+  <a href="eKhabar.html">🌐 eKhabar</a>
+</div>
+
   <h1> Tentang Kami - Stage Akhbar</h1>
 
   <div class="section">
