--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
   </div>
 
 
-  <footer>© 2025 Fatih | Glitch Edition dan juga eKhabar!</footer>
+  <footer>© 2025 Fatih | GitHub, Stage Akhbar dan juga eKhabar!</footer>
 </body>
 </html>
