--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
   <h2>📢 Budak Buka Laptop, Tiba-Tiba Keluar Nasi Lemak!</h2>
   <p>“Saya install aplikasi Sarapan.exe je...” kata mangsa kenyang.</p>
 </div>
+
+<div class="berita">
+  <h2>📢 Pensel Bertumbuk dengan Pemadam!</h2>
+  <p>“Dia asyik hilangkan tulisan aku!” jerit pensel sambil golek atas meja.</p>
+</div>
+
   <!-- 🔔 Kotak eKhabar -->
   
   <!-- ⚠️ Peringatan palsu -->
