--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
 
- <div class="navbar">
-  <h1>
-    <img src="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
-         alt="Windows XP Logo" 
-         style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
-     Stage Akhbar
-  </h1>
-  <a href="tentangkami.html">ℹ️ Tentang Kami</a>
-  <a href="eKhabar.html">🌐 eKhabar</a>
-</div>
-
+  <div class="navbar">
+    <h1>
+      <img src="hd-windows-xp-logo-icon-sign-png-701751694713908n79xquyu8a.png" 
+           alt="Windows XP Logo" 
+           style="vertical-align: middle; width: 24px; height: 24px; margin-right: 8px;">
+      Stage Akhbar
+    </h1>
+    <a href="tentangkami.html">ℹ️ Tentang Kami</a>
+    <a href="eKhabar.html">🌐 eKhabar</a>
+  </div>
 
   <p>Berita paling pelik dalam sejarah lawak manusia!</p>
 
@@ -30,48 +29,44 @@
 
   <div class="berita">
     <h2>📢 Seorang budak masuk peti ais!</h2>
-    <p>katanya "sebab nak jadi aiskrim malaysia! boleh jilat badan sendiri!".</p>
+    <p>Katanya "sebab nak jadi aiskrim malaysia! boleh jilat badan sendiri!".</p>
   </div>
 
-
+  <div class="berita">
+    <h2>📢 Berita 3: Tikus pakai tali leher!</h2>
+    <p>“Saya CEO dapur sekarang!” katanya sambil gigit keju.</p>
+  </div>
 
   <div class="berita">
-  <h2>📢 Berita 3: Tikus pakai tali leher!</h2>
-  <p>“Saya CEO dapur sekarang!” katanya sambil gigit keju.</p>
-</div>
+    <h2>📢 Lemang Bernafas Ditemui!</h2>
+    <p>“Saya cuma nak raya setiap hari,” kata lemang yang melompat dari dapur.</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Lemang Bernafas Ditemui!</h2>
-  <p>“Saya cuma nak raya setiap hari,” kata lemang yang melompat dari dapur.</p>
-</div>
+  <div class="berita">
+    <h2>📢 Kerusi Sekolah Lari Dari Kelas!</h2>
+    <p>“Dah 15 tahun orang duduk atas saya, saya nak rehat!” jerit kerusi sambil berlari ke padang.</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Kerusi Sekolah Lari Dari Kelas!</h2>
-  <p>“Dah 15 tahun orang duduk atas saya, saya nak rehat!” jerit kerusi sambil berlari ke padang.</p>
-</div>
+  <div class="berita">
+    <h2>📢 Pensel Terlalu Tajam Sampai Potong Meja!</h2>
+    <p>Cikgu berkata, “Ini bukan alat tulis, ini senjata!”</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Pensel Terlalu Tajam Sampai Potong Meja!</h2>
-  <p>Cikgu berkata, “Ini bukan alat tulis, ini senjata!”</p>
-</div>
+  <div class="berita">
+    <h2>📢 Air Mineral Cakap Bahasa Korea?!</h2>
+    <p>Murid terkejut botol air jerit “Annyeong!” masa dibuka.</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Air Mineral Cakap Bahasa Korea?!</h2>
-  <p>Murid terkejut botol air jerit “Annyeong!” masa dibuka.</p>
-</div>
+  <div class="berita">
+    <h2>📢 Budak Buka Laptop, Tiba-Tiba Keluar Nasi Lemak!</h2>
+    <p>“Saya install aplikasi Sarapan.exe je...” kata mangsa kenyang.</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Budak Buka Laptop, Tiba-Tiba Keluar Nasi Lemak!</h2>
-  <p>“Saya install aplikasi Sarapan.exe je...” kata mangsa kenyang.</p>
-</div>
+  <div class="berita">
+    <h2>📢 Pensel Bertumbuk dengan Pemadam!</h2>
+    <p>“Dia asyik hilangkan tulisan aku!” jerit pensel sambil golek atas meja.</p>
+  </div>
 
-<div class="berita">
-  <h2>📢 Pensel Bertumbuk dengan Pemadam!</h2>
-  <p>“Dia asyik hilangkan tulisan aku!” jerit pensel sambil golek atas meja.</p>
-</div>
-
-  <!-- 🔔 Kotak eKhabar -->
-  
   <!-- ⚠️ Peringatan palsu -->
   <div class="peringatan">
     ⚠️ <strong>Peringatan:</strong> Laman web ini hanyalah untuk hiburan semata-mata.<br>
@@ -79,7 +74,7 @@
     Jangan beli, jangan percaya — GELAK PUN DAH PUAS! 🤣
   </div>
 
-
   <footer>© 2025 Fatih | GitHub, Stage Akhbar dan juga eKhabar!</footer>
+
 </body>
 </html>
