--- a/eKhabar.html
+++ b/eKhabar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Stage Akhbar</title>
-  <link rel="stylesheet" href="style.css"><audio id="xpSound" src="xp-error.wav" preload="auto"></audio>
+  <link rel="stylesheet" href="style.css"><audio id="xpSound" src="Windows XP Error Sound.mp3" preload="auto"></audio>
 
 <script>
   function playXpError() {
