--- a/tentangkami.html
+++ b/tentangkami.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <audio id="xpSound" src="xp-error.wav" preload="auto"></audio>
+  <audio id="xpSound" src="Windows XP Error Sound.mp3" preload="auto"></audio>
 
 <script>
   function playXpError() {
