--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Stage Akhbar</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/png">
-  <audio id="xpSound" src="xp-error.wav" preload="auto"></audio>
+  <audio id="xpSound" src="Windows XP Error Sound.mp3" preload="auto"></audio>
 
 <script>
   function playXpError() {
