--- a/tentangkami.html
+++ b/tentangkami.html
@@ -77,9 +77,9 @@
   <a href="eKhabar.html">🌐 eKhabar</a>
 </div>
 
-  <h2> Tentang Kami - Stage Akhbar</h2>
 
   <div class="section">
+    <h2> Tentang Kami - Stage Akhbar</h2><br>
     <p><strong>Stage Akhbar</strong> ialah laman berita jenaka sejak <strong>2004</strong>* (hakikatnya 2025) yang dicipta untuk gelak dulu, baca kemudian.</p>
   </div>
 
